force-app/main/default/objects/User/fields/Application_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Application_Cluster__c</fullName>
    <label>Application Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrasives</fullName>
            </value>
            <value>
                <fullName>B&amp;I</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>FLS</fullName>
            </value>
            <value>
                <fullName>G&amp;C</fullName>
            </value>
            <value>
                <fullName>Paper &amp; Board</fullName>
            </value>
            <value>
                <fullName>PARP</fullName>
            </value>
            <value>
                <fullName>Refractory Producers</fullName>
            </value>
            <value>
                <fullName>Foundry</fullName>
            </value>
            <value>
                <fullName>Iron &amp; Steel</fullName>
            </value>
            <value>
                <fullName>Thermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>