force-app/main/default/objects/User/fields/Authority_Signature__c.field-meta.xml
<CustomField>
    <fullName>Authority_Signature__c</fullName>
    <label>Authority Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>