force-app/main/default/objects/User/fields/Authority_Signature_Link__c.field-meta.xml
<CustomField>
    <fullName>Authority_Signature_Link__c</fullName>
    <formula>HYPERLINK(&apos;/apex/signature?id=&apos;+Id+&apos;&amp;field=Authority_Signature__c&apos;,&apos;Click Here to Sign&apos;,&apos;_BLANK&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authority Signature Link</label>
    <type>Text</type>
</CustomField>